# patent-data-governance

./: .gitignore  README.md  csv_to_ods.py  ods_csv.py  offset_migrate_stage.py  pyproject.toml  refresh_instock_intci.py  refresh_stage_raw.py
configs/: a.yaml  c.yaml  d.yaml  e.yaml  example_a.yaml  g.yaml  test_d.yaml  test_e.yaml
src/original_version/: ODS-Stage跑批.py  stage_clean_job.py  同时分流.py  插入unqualified.py  插入最终dwd表.py
src/pat_etl/: cli.py  config.py  logging_.py
src/pat_etl.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/pat_etl/db/: mysql.py
src/pat_etl/jobs/: _shared.py  finalize_instock.py  finalize_unqualified.py  ods_to_stage.py  stage_clean.py  stage_split.py
