[project]
name = "pat-etl"
version = "0.1.0"
description = "Lightweight ETL runner for ODS->Stage->DWD + file checks"
requires-python = ">=3.10"
dependencies = [
  "pymysql>=1.1.0",
  "PyYAML>=6.0.0",
]

[project.scripts]
pat-etl = "pat_etl.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
